@@ -24,8 +24,8 @@ export(Surv, Surv2, Surv2data, aeqSurv, aareg, agreg.fit,
        coxph.wtest, finegray, format.Surv, 
        frailty,  frailty.gamma, 
        frailty.gaussian, frailty.t, is.Surv, 
-       is.na.Surv, is.ratetable, nsk,
-       match.ratetable, neardate,
+       is.na.Surv, is.ratetable, lvcf, nsk,
+       match.ratetable, neardate, nostutter,
        psurvreg, qsurvreg, dsurvreg, pseudo,
        pspline, pyears, ratetableDate, ratetable,
        ridge, royston, rsurvreg, rttright,statefig, strata, 
