@@ -17,9 +17,10 @@ Surv <- function(time, time2, event,
     # and missing(event) instead?  Because we want to assume that 
     # "Surv(a,b)" has the variable b matched to event rather than time2.
     #
-    mtype <- match.arg(c(type, 'mstate'))
-    if (type== "mstate") 
+    if (!missing(type) && type =="mstate") {
         warning("type= 'mstate' is depricated, use a factor variable as status")
+        mtype <- "mstate"
+    }  else mtype <- match.arg(type) 
     
     # If type is missing or it is "mstate", I need to figure out for myself
     #  whether I have (time, time2, status) or (time, status) data
