@@ -949,6 +949,8 @@ xdrop <- Xatt$assign %in% adrop  #columns to drop (always the intercept)
 X <- X[, !xdrop, drop=FALSE]
 attr(X, "assign") <- Xatt$assign[!xdrop]
 attr(X, "contrasts") <- Xatt$contrasts
+
+Xmeans <- colMeans(X) # do this before expanding a multistate model
 @ 
 
 Finish the setup.  If someone includes an init statement or offset, make sure
