@@ -1,7 +1,7 @@
 
-R Under development (unstable) (2022-08-09 r82699) -- "Unsuffered Consequences"
-Copyright (C) 2022 The R Foundation for Statistical Computing
-Platform: x86_64-pc-linux-gnu (64-bit)
+R Under development (unstable) (2025-03-16 r87984) -- "Unsuffered Consequences"
+Copyright (C) 2025 The R Foundation for Statistical Computing
+Platform: x86_64-pc-linux-gnu
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -43,9 +43,12 @@ Type 'q()' to quit R.
 Warning message:
 In tmerge(base, events, id = id, got_flu = cumevent(time, got_flu),  :
   replacement of variable 'has_flu'
+> # The above should give a warning message re replacement of "has_fu"
 > 
 > all.equal(b2$got_flu, c(0,0,1,0,0,0,3,0))
 [1] TRUE
+> # Per the above-- a cumevent result is only non-zero at a new event time.
+> # b2$id= 1, 2,2,2,2,2,2,2; a tdc would be 0,0, 1,1,1,3,3.
 > 
 > 
 > # Tied times in the merger data set
@@ -65,7 +68,7 @@ In tmerge(base, events, id = id, got_flu = cumevent(time, got_flu),  :
 [1] TRUE
 > 
 > # Multiple overlapping time windows in the first step.
-> #  Should generate an error message
+> #  Should generate an error message "duplicate identifiers"
 > test <- tryCatch(
 +             {tmerge(pbcseq[, c("id", "trt", "age", "sex")], pbcseq, id,
 +                death = event(futime, status==2))},
@@ -111,4 +114,4 @@ successful tmerge error test
 > 
 > proc.time()
    user  system elapsed 
-  1.142   0.080   1.219 
+  0.932   0.064   0.986 
