@@ -12,7 +12,11 @@
 \maketitle
 
 Many of the vignettes have been moved to a separate survivalVignettes package.
-There are 2 primary reasons. First, as a recommended package survival cannot
+There are two primary reasons. 
+One is that the survival package is becoming physically large,
+and it was useful to split these off for maintainance purposes.
+(The package is already an exception to CRAN policies on maximal size.)
+A second is that as a recommended package survival cannot
 depend on any packages outside of  base + recommended.  
 (A minimally sufficient set that is self contained
 is important for R maintainance and validation.)
@@ -24,6 +28,8 @@ and it was useful to split these off for maintainance purposes.
  
 Vignettes that have currently been relocated
 \begin{enumerate}
+   \item external: A long discussion and examples focused on the external
+     validation of a survival model.
    \item tutorial: This works through the examples found in the excellent
      tutorial by H. Putter, M. Fiocco and R. Geskus. 
      Tutorial in biostatistics: competing risks and multi-state models,
